Fix for bug 17937.  nsHTMLEditor::DeleteSelectionAndCreateNode() wasn't addref'ing an out parameter.  r=sfraser.